--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,15 +1,18 @@
-form {
-    display: inline-flex;
-    flex-direction: column;
-}
-
-input {
-    margin: 5px;
-    max-width: 500px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;1,300&display=swap');
 
 #submit {
     margin-top: 10px;
     max-width: 150px;
     align-self: center;
+}
+
+#reginvite, #conditional {
+    font-family: 'Jost', sans-serif;
+    font-weight: bold;
+}
+
+#reg_form {
+    display: inline-flex;
+    flex-direction: column;
+    font-family: 'Jost', sans-serif;
 }
