improvements on GS feedback

--- a/src/components/CountKitty/CountKitty.css
+++ b/src/components/CountKitty/CountKitty.css
@@ -4,6 +4,8 @@
 #stroke {
     font-family: 'Mali', cursive;
     font-weight: bold;
+    border-top: 1px dotted grey;
+    padding-top: 10px;
 }
 
 #spam {
